--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "marker-clusterer-plus": "^2.1.4",
     "vue": "^3.0.0",
     "vue3-google-map": "^0.8.3"
   },
