--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "marker-clusterer-plus": "^2.1.4",
     "vue": "^3.0.0",
+    "vue3-gmap-custom-marker": "0.0.1",
     "vue3-google-map": "^0.8.3"
   },
   "devDependencies": {
